--- a/trabalho_ap2/style.css
+++ b/trabalho_ap2/style.css
@@ -1,7 +1,3 @@
-#body{
-    
-}
-
 #grid-login {
     text-align: center;
     grid-template-areas:
@@ -10,9 +6,38 @@
 }
 
 #divTitulo {
-    padding: 6.5em;
+    align-content: center;
+    grid-area: a;
+    height: 70vh;
 }
 
 #divSenha {
-    padding: 6.5em;
+    align-content: center;
+    grid-area: b;
+    height: 0px;
 }
+
+@media only screen and (min-width: 768px){
+    #grid-login {
+        text-align: center;
+        display: grid;
+        grid-template-areas:
+        "a b";
+    }
+
+    #divTitulo {
+        align-content: center;
+        grid-area: a;
+        height: 90vh;
+    }
+
+    #divSenha {
+        align-content: center;
+        grid-area: b;
+        height: 90VH;
+    }
+}
+
+@media only screen and (min-width: 1024px){}
+
+@media only screen and (min-width: 1200px){}
